# skillspec

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.cargo/: config.toml
docs/: grammar.ebnf  guide.md  language-reference.md  optimize-guide.md  quickstart.md
examples/: README.md  brainstorming.agent  composition.agent  orchestration.agent  pipeline.agent  tested-skill.agent
examples/references/: adrs.md  design-patterns.md  lessons.md
examples/types/: design.agent
optimize/: agent_proxy_backend.py  skillopt-agent-proxy.patch  skillspec_adapter.py
skills/: README.md  skill-writer.agent  skillspec-backport.agent  skillspec-migrate.agent  skillspec-optimize.agent  skillspec-test.agent
skills/fixtures/: bad_priorities.agent  confidence_test_skill.agent  dependency_inference.agent  failing_test_skill.agent  minimal.agent  mocked_tool_skill.agent  multi_step.agent  multi_step_ambiguous_change.md  no_types.agent  prose_preservation.agent  simple.agent  simple_partial.agent  simple_tested_skill.agent  simple_with_new_param.md  typed.agent  typed_modified.md
skills/references/: antipatterns.md  assertions-deterministic.md  assertions-llm-judged.md  assertions-quantifiers.md  (+10 more)
src/: ast.rs  budget.rs  checker.rs  compiler.rs  compiler_clinerules.rs  compiler_cursor.rs  compiler_ir.rs  compiler_skillmd.rs  compiler_systemprompt.rs  deps.rs  diff.rs  error.rs  formatter.rs  lexer.rs  lib.rs  lint.rs  main.rs  migrate.rs  optimize.rs  parser.rs  resolve.rs  test_harness.rs  token.rs  types.rs
tests/: integration_tests.rs
(+24 files in other folders)
